ttcn3 tests: make it convenient to invoke custom tests manually
In various ttcn3-*-test jenkins.sh / Dockerfile:

- add -h (hack) option to jenkins.sh
  If calling jenkins.sh with the -h option, bind external osmo-ttcn3-hacks
  sources into the docker containers and start a shell instead of the tests:
    jenkins.sh -h ~/src/osmo-ttcn3-hacks [bind/this/path/to/src]
  An optional second argument is a path bound to /src in the docker image.

- move Dockerfile RUN commands to Makefile within docker img
  Add a Makefile to the image's root, move the RUN command there and call that
  'make' from the Dockerfile RUN command; allows easy manual invocation.

--- a/osmo-bsc-master/Dockerfile
+++ b/osmo-bsc-master/Dockerfile
@@ -40,8 +40,9 @@ RUN	cd osmo-bsc && \
 VOLUME	/data
 
 COPY	osmo-bsc.cfg /data/osmo-bsc.cfg
+COPY	Makefile.within-docker-img /Makefile
 
-WORKDIR	/data
-CMD	["/usr/local/bin/osmo-bsc"]
+WORKDIR	/
+CMD	["make", "run"]
 
 #EXPOSE	
