--- a/ttcn3-sgsn-test/osmo-sgsn.cfg
+++ b/ttcn3-sgsn-test/osmo-sgsn.cfg
@@ -2,12 +2,14 @@
 ! OsmoSGSN (1.2.0.46-e77e-dirty) configuration saved from vty
 !!
 !
-log stderr
+log file osmo-sgsn.log
  logging filter all 1
  logging color 1
+ logging print level 1
  logging print category 1
- logging timestamp 1
- logging print file 1
+ logging print category-hex 0
+ logging print extended-timestamp 1
+ logging print file basename
  logging level all everything
  logging level mm debug
  logging level pag notice
