--- a/ttcn3-bsc-test/osmo-bsc.cfg
+++ b/ttcn3-bsc-test/osmo-bsc.cfg
@@ -3,12 +3,24 @@
 !!
 password foo
 !
+log stderr
+ logging filter all 1
+ logging color 1
+ logging print category 1
+ logging print category-hex 0
+ logging print level 1
+ logging print extended-timestamp 1
+ logging print file basename last
+ logging level all debug
 log file /data/osmo-bsc.log
  logging filter all 1
  logging color 0
  logging print category 1
  logging timestamp 1
  logging print extended-timestamp 1
+ logging print category-hex 0
+ logging print file basename last
+ logging print level 1
  logging level all everything
  logging level rll notice
  logging level cc notice
@@ -18,7 +30,7 @@ log file /data/osmo-bsc.log
  logging level nm info
  logging level pag notice
  logging level meas notice
- logging level msc notice
+ logging level msc debug
  logging level mgcp notice
  logging level ho notice
  logging level ref notice
@@ -43,6 +55,7 @@ log file /data/osmo-bsc.log
  logging level lsua notice
  logging level lm3ua notice
  logging level lmgcp notice
+ logging level all debug
 !
 stats interval 5
 !
