--- a/ttcn3-msc-test/osmo-msc.cfg
+++ b/ttcn3-msc-test/osmo-msc.cfg
@@ -2,12 +2,24 @@
 ! OsmoMSC (1.1.2.66-629c4-dirty) configuration saved from vty
 !!
 !
+log stderr
+ logging filter all 1
+ logging color 1
+ logging timestamp 1
+ logging print level 1
+ logging print category 1
+ logging print category-hex 0
+ logging print file basename last
+ logging level all debug
 log file /data/osmo-msc.log
  logging filter all 1
  logging color 0
- logging print category 1
  logging timestamp 1
- logging level all everything
+ logging print level 1
+ logging print category 1
+ logging print category-hex 0
+ logging print file basename last
+ logging level all debug
  logging level rll notice
  logging level cc debug
  logging level mm debug
